implement genre
